--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-currency-input-field": "^3.6.11",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.11.2",
     "prisma": "^5.0.0"
   }
 }
